@@ -57,7 +57,7 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #define BCD(X)   ((X)/16*10 + (X)%16)
 #define BCD_REVERSE(X)   ((X)/10*16 + (X)%10)
 
-#define EXIT_ON_RUNTIME_ERROR_VERBOSE(X)  do {  fprintf(stdout, "%s\n", X) ; fflush(NULL);  clean_exit(EXIT_FAILURE);  } while(0);
+#define EXIT_ON_RUNTIME_ERROR_VERBOSE(X)  do {  fprintf(stderr, "%s\n", X) ; clean_exit(EXIT_FAILURE);  } while(0);
 #define EXIT_ON_RUNTIME_ERROR  EXIT_ON_RUNTIME_ERROR_VERBOSE("[ERR]  Exiting.")
 
 
